# dating-booster

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
agent_adapters/: README.md
agent_adapters/claude-code/: INSTALL.md  README.md  adapter-package.json
agent_adapters/codex/: README.md
agent_adapters/openclaw/: INSTALL.md  README.md  adapter-package.json
agent_adapters/shared/: README.md
app_profiles/: README.md  bumble.json  tashuo.json  tinder.json  wechat.json
dating_boost/: __init__.py  cli.py  host_loop.py  policy.py
dating_boost/apps/: __init__.py  base.py  legacy.py  native_gui_session.py  registry.py
dating_boost/core/: __init__.py  action_audit.py  agent_adapters.py  automation.py  capabilities.py  context_pack.py  daemon.py  diagnostics.py  draft_evidence 2.py  draft_evidence.py  draft_generation_audit.py  draft_review_audit 2.py  encryption.py  feedback.py  goals.py  gui_harness.py  harness_steps.py  identity.py  live_send_contract.py  managed_gui_send.py  managed_session.py  models.py  observation_authoring.py  operator.py  planner.py  production_store.py  relationship_report.py  release.py  replay.py  repositories.py  runtime_scope.py  safety.py  scan_authoring.py  send_pipeline 2.py  send_verification.py  skill_doctor.py  standalone_actions.py  standalone_observation.py  standalone_provider_factory.py  standalone_runtime.py  (+9 more)
dating_boost/evals/: __init__.py  rubrics.py  runner.py
dating_boost/harness/: __init__.py  base.py  input_backends.py  screen_state.py
dating_boost/intelligence/: __init__.py  backend_factory.py  backends.py  (+6 more)
docs/: ARCHITECTURE.md  README.md
schemas/: app_profile.schema.json
scripts/: agent_native_smoke.py  install-claude-code.sh  install-codex.sh  operator_host_loop.py  tashuo_mac_ios_managed_smoke 2.py  tashuo_mac_ios_managed_smoke.py  tashuo_mac_ios_stage_alpha_release_gate.py  tashuo_mac_ios_standalone_alpha_gate.py  tashuo_mac_ios_standalone_doctor.py  tashuo_mac_ios_standalone_smoke.py
tests/: test_agent_native_cli.py  test_agent_native_launch_docs.py  test_agent_native_manual_workflow.py  test_app_adapters.py  test_app_profiles.py  test_automation_planner.py  test_automation_session.py  test_backends.py  test_ci_config.py  test_claude_code_adapter.py  test_cli_mvp.py  test_confirmation_contract.py  test_content_policy.py  test_context_pack.py  test_core_models.py  test_daemon_standalone.py  test_draft_evidence 2.py  test_draft_evidence.py  test_draft_generation.py  test_draft_review.py  test_draft_strategy_gate.py  test_encryption.py  test_evals.py  test_feedback.py  test_goals.py  test_gui_harness.py  test_harness_steps 2.py  test_host_native_phase_c.py  test_identity.py  test_managed_session.py  test_memory_cli.py  test_memory_models.py  test_memory_proposals.py  test_memory_reducers.py  test_memory_retrieval.py  test_memory_review_queue.py  test_naturalness_fixtures.py  test_observation_authoring.py  test_observations.py  test_openclaw_adapter.py  (+32 more)
(+113 files in other folders)
