[project]
name = "dating-booster"
version = "0.2.0"
description = "Local-first dating workflow copilot experiments."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
openai = ["openai>=2,<3"]
test = ["pytest>=8"]

[project.scripts]
dating-boost = "dating_boost.cli:main"
dating-boost-host-loop = "dating_boost.host_loop:main"

[tool.setuptools.packages.find]
include = ["dating_boost*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
