[project]
name = "dating-booster"
version = "1.0.0-rc.1"
description = "Local-first dating workflow copilot experiments."
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = ["cryptography>=42,<47"]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
openai = ["openai>=2,<3"]
test = ["pytest>=8", "jsonschema>=4,<5"]

[project.scripts]
dating-boost = "dating_boost.cli:main"
dating-boost-host-loop = "dating_boost.host_loop:main"
dating-boostd = "dating_boost.core.daemon:daemon_entry"

[tool.setuptools.packages.find]
include = ["dating_boost*"]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.package-data]
dating_boost = [
    "resources/agent_adapters/claude-code/adapter-package.json",
    "resources/agent_adapters/claude-code/README.md",
    "resources/agent_adapters/claude-code/INSTALL.md",
    "resources/agent_adapters/claude-code/skills/dating-booster/SKILL.md",
    "resources/agent_adapters/shared/references/contracts.md",
    "resources/agent_adapters/shared/references/workflows.md",
    "resources/agent_adapters/codex/dating-booster-codex/INSTALL.md",
    "resources/agent_adapters/codex/dating-booster-codex/INSTALL_FROM_GITHUB.md",
    "resources/agent_adapters/codex/dating-booster-codex/SKILL.md",
    "resources/agent_adapters/codex/dating-booster-codex/skill-package.json",
    "resources/agent_adapters/codex/dating-booster-codex/examples/codex-first-workflow.md",
    "resources/agent_adapters/codex/dating-booster-codex/scripts/bootstrap_cli.py",
    "resources/agent_adapters/codex/dating-booster-codex/scripts/doctor.py",
    "resources/agent_adapters/codex/dating-booster-codex/references/*.md",
    "resources/agent_adapters/codex/dating-booster-codex/references/workflows.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
